--- a/node_src/package.json
+++ b/node_src/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Darren Swan",
-  "license": "GNU"
+  "license": "GNU",
+  "dependencies": {
+    "node-dht-sensor": "^0.3.0"
+  }
 }
